# shaip-logger

./: README.md  pyproject.toml
examples/: callback-example.py  log-via-api-example.py  log-via-sdk-example.py  update_user_feedback.py
shaip_logger/: api_key.py  constants.py  inference_logger.py  langchain_handler.py  openai_wrapper.py  request_helper.py  shaip_meta.py
shaip_logger/feedback/: user_feedback.py
shaip_logger/log_stream_inference/: log_stream_inference.py  openai_chat_completion_stream.py  openai_completion_stream.py
shaip_logger/tracing/: trace.py
shaip_logger/tracing/callback/: langchain.py
