[tool.poetry]
name = "shaip-logger"
version = "1.2.5"
description = ""
authors = ["Ganesh Sutar <ganesh.s@shaip.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
langchain = ">=0.0.350"
retrying = "^1.3.4"
tiktoken = "^0.5.1"
pydantic = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
